--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^5.3.2",
     
     "bootstrap-icons": "^1.11.1",
+        "date-fns": "^2.30.0",
+
 
     "react": "^18.2.0",
 
